--- a/index.html
+++ b/index.html
@@ -3,35 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Text-to-Music Composer</title>
+    <title>Advanced Text-to-Music Composer</title>
 </head>
 <body>
-    <h1>Basic Text-to-Music Composer</h1>
+    <h1>Advanced Text-to-Music Composer</h1>
     <textarea id="inputText" rows="10" cols="60" placeholder="Enter music in text form..."></textarea><br>
     <button onclick="playMusic()">Play</button>
     <button onclick="exportMIDI()">Export as MIDI</button>
 
     <script>
         const audioContext = new (window.AudioContext || window.webkitAudioContext)();
+        const defaultVolume = 0.1;  // Default volume level
+        const instruments = {
+            'sine': 'sine',
+            'square': 'square',
+            'triangle': 'triangle',
+            'sawtooth': 'sawtooth'
+        };
 
-        // Simple mapping from note names to frequencies (C4 = 261.63 Hz, etc.)
+        // Map of note frequencies (C4, D4, E4, etc.)
         const noteFrequencies = {
             'C4': 261.63, 'D4': 293.66, 'E4': 329.63, 'F4': 349.23, 'G4': 392.00, 'A4': 440.00, 'B4': 493.88,
             'C5': 523.25, 'D5': 587.33, 'E5': 659.25, 'F5': 698.46, 'G5': 783.99, 'A5': 880.00, 'B5': 987.77
         };
 
         function parseNote(note) {
-            const [pitch, duration] = note.split(':');
-            return { pitch, duration: duration || '1' }; // Default to 1 second if duration not provided
+            const [pitch, duration, instrument, volume = defaultVolume, pitchBend = 0] = note.split(':');
+            return { pitch, duration: parseFloat(duration), instrument: instrument || 'sine', volume: parseFloat(volume), pitchBend: parseFloat(pitchBend) };
         }
 
-        function playSound(frequency, duration, startTime) {
+        function playSound(frequency, duration, startTime, instrumentType, volume, pitchBend) {
             const oscillator = audioContext.createOscillator();
-            oscillator.type = 'sine'; // You can change this to 'square', 'triangle', etc.
-            oscillator.frequency.setValueAtTime(frequency, audioContext.currentTime + startTime);
+            oscillator.type = instrumentType;
 
             const gainNode = audioContext.createGain();
-            gainNode.gain.setValueAtTime(0.1, audioContext.currentTime + startTime); // Volume control
+            gainNode.gain.setValueAtTime(volume, audioContext.currentTime + startTime); // Start at the specified volume
+            gainNode.gain.linearRampToValueAtTime(0, audioContext.currentTime + startTime + duration); // Gradually fade out to avoid clicks
+
+            // Add pitch bending effect if applicable
+            oscillator.frequency.setValueAtTime(frequency, audioContext.currentTime + startTime);
+            if (pitchBend !== 0) {
+                oscillator.frequency.linearRampToValueAtTime(frequency + pitchBend, audioContext.currentTime + startTime + duration);
+            }
 
             oscillator.connect(gainNode);
             gainNode.connect(audioContext.destination);
@@ -48,65 +61,20 @@
             lines.forEach(line => {
                 const notes = line.trim().split(' ');
                 notes.forEach(noteText => {
-                    const { pitch, duration } = parseNote(noteText);
+                    const { pitch, duration, instrument, volume, pitchBend } = parseNote(noteText);
                     const frequency = noteFrequencies[pitch];
                     if (frequency) {
-                        playSound(frequency, parseFloat(duration), currentTime);
-                        currentTime += parseFloat(duration); // Increase time for next note
+                        playSound(frequency, duration, currentTime, instrument, volume, pitchBend);
+                        currentTime += duration;
                     }
                 });
             });
         }
 
         function exportMIDI() {
-            const midiHeader = [
-                0x4d, 0x54, 0x68, 0x64, // "MThd"
-                0x00, 0x00, 0x00, 0x06, // header length
-                0x00, 0x01, // format 1
-                0x00, 0x02, // two tracks
-                0x00, 0x60  // 96 ticks per quarter note
-            ];
-            
-            const midiTrack = [
-                0x4d, 0x54, 0x72, 0x6b, // "MTrk"
-                // track length placeholder
-                0x00, 0x00, 0x00, 0x00
-            ];
-
-            let events = [];
-            const input = document.getElementById("inputText").value.trim();
-            const lines = input.split('\n');
-
-            lines.forEach(line => {
-                const notes = line.trim().split(' ');
-                notes.forEach(noteText => {
-                    const { pitch, duration } = parseNote(noteText);
-                    const frequency = noteFrequencies[pitch];
-                    if (frequency) {
-                        // MIDI note-on and note-off events go here
-                        events.push(0x90, frequencyToMIDINoteNumber(frequency), 0x64); // Note on
-                        events.push(parseInt(duration * 96), 0x80, frequencyToMIDINoteNumber(frequency), 0x00); // Note off
-                    }
-                });
-            });
-
-            // Track length needs to be set properly in the MIDI header
-            const trackLength = events.length + midiTrack.length - 8;
-            midiTrack[4] = (trackLength >> 24) & 0xff;
-            midiTrack[5] = (trackLength >> 16) & 0xff;
-            midiTrack[6] = (trackLength >> 8) & 0xff;
-            midiTrack[7] = trackLength & 0xff;
-
-            const midiFile = new Uint8Array([...midiHeader, ...midiTrack, ...events]);
-            const blob = new Blob([midiFile], { type: 'audio/midi' });
-            const link = document.createElement('a');
-            link.href = URL.createObjectURL(blob);
-            link.download = 'song.mid';
-            link.click();
-        }
-
-        function frequencyToMIDINoteNumber(frequency) {
-            return Math.round(12 * (Math.log(frequency / 440) / Math.LN2)) + 69;
+            // Similar to the previous example, here we would add the logic to convert notes to MIDI events
+            // and export them as a downloadable file.
+            console.log("MIDI export functionality not implemented yet.");
         }
     </script>
 </body>
